<?xml version="1.0"?>
<package format="2">
  <name>cohrint_minau</name>
  <version>0.0.0</version>
  <description>The cohrint_minau package</description>
  <maintainer email="lukebarbier12@gmail.com">luke</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>etddf_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
